kuber/searchservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searchservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: searchservice
  template:
    metadata:
      labels:
        app: searchservice
    spec:
      containers:
        - name: searchservice
          imagePullPolicy: Always
          image: plyshka/search_server_perflib:latest
          ports:
            - containerPort: 8081
