kuber/searchservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searchservice
  labels:
    app: searchservice
spec:
  ports:
    - name: searchservice
      protocol: TCP
      port: 8081
  selector:
   app: searchservice
